--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "vue-bs-modal": "^0.7.9",
         "vue-router": "^4.0.3",
         "vue3-slide-up-down": "^1.2.5",
-        "vuex": "^4.0.0"
+        "vuex": "^4.0.0",
+        "vuex-persistedstate": "^4.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
